# killswitch

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml  ci.yml
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs
src/lib/: PortTable.svelte
src/styles/: global.css
